# aicats-forecast

./: .gitignore  .gitmodules  README.md  install_finappmodel_dependency.sh  install_finappmodel_dependency_with_version.sh  pyproject.toml
aicats_forecast/bots/m0001/: dataset.py  model.py  postprocess.py  preprocess.py  simulated_bot.py
aicats_forecast/crawler/: gmo_client.py
aicats_forecast/services/crawler/gmo/: __init__.py  csv_file.py  trades.py  trades_crawler.py
aicats_forecast/services/crawler/wa/: __init__.py  daily_csv_file.py  wa_crawler.py
aicats_forecast/services/feature/creation/: ts_feature.py
aicats_forecast/services/preprocess/: agg.py
aicats_forecast/utils/: logger.py  print.py
scripts/: schedule_test.py  start_crawl_daemon.py  start_gmo_crawl_daemon.py  start_preprocess_agg_daemon.py  start_wa_crawl_daemon.py
scripts/bots/m0001/: dataset.py  feat_extractor.py  model.py  simulate.py  simulate_bot2.py  simulate_bot3.py
