[tool.poetry]
name = "aicats-forecast"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "aicats_forecast" },
]

[tool.poetry.dependencies]
python = "3.8.10"
pandas = "^1.4.2"
schedule = "^1.1.0"
websocket-client = "^1.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
