[tool.poetry]
name = "aicats-forecast"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "aicats_forecast" },
]

[tool.poetry.dependencies]
python = "3.8.10"
pandas = "^1.4.2"
schedule = "^1.1.0"
websocket-client = "^1.3.2"
numpy = "^1.22.3"
requests = "^2.27.1"
aiohttp = "^3.8.1"
aioitertools = "^0.10.0"
alembic = "^1.7.7"
async-timeout = "^4.0.2"
attrs = "^21.4.0"
boto3 = "^1.21.42"
botocore = "^1.24.42"
catboost = "^1.0.5"
chardet = "^4.0.0"
cliff = "^3.10.1"
cmaes = "^0.8.2"
cmd2 = "^2.4.1"
colorama = "^0.4.4"
colorlog = "^6.6.0"
cycler = "^0.11.0"
Cython = "^0.29.28"
fastprogress = "^1.0.2"
fsspec = "^2022.3.0"
graphviz = "^0.20"
idna = "^3.3"
iniconfig = "^1.1.1"
jmespath = "^1.0.0"
joblib = "^1.1.0"
kiwisolver = "^1.4.2"
lightgbm = "^3.3.2"
Mako = "^1.2.0"
MarkupSafe = "^2.1.1"
matplotlib = "^3.5.1"
multidict = "^6.0.2"
optuna = "^2.10.0"
overrides = "^6.1.0"
packaging = "^21.3"
pbr = "^5.8.1"
Pillow = "^9.1.0"
plotly = "^5.7.0"
pluggy = "^1.0.0"
prettytable = "^3.2.0"
py = "^1.11.0"
pyparsing = "^3.0.8"
pyperclip = "^1.8.2"
pytest = "^7.1.1"
python-dateutil = "^2.8.2"
python-editor = "^1.0.4"
pytz = "^2022.1"
PyYAML = "^6.0"
retrying = "^1.3.3"
s3transfer = "^0.5.2"
scikit-learn = "^1.0.2"
scipy = "^1.8.0"
six = "^1.16.0"
SQLAlchemy = "^1.4.35"
stevedore = "^3.5.0"
TA-Lib = "^0.4.24"
threadpoolctl = "^3.1.0"
toml = "^0.10.2"
torch = "^1.11.0"
tqdm = "^4.64.0"
typing-extensions = "^4.2.0"
urllib3 = "^1.26.9"
wcwidth = "^0.2.5"
wrapt = "^1.14.0"
yarl = "^1.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
